--- a/src/main/webapp/relatoriosDeEntradaeSaida.xhtml
+++ b/src/main/webapp/relatoriosDeEntradaeSaida.xhtml
@@ -12,8 +12,18 @@
 		<ui:define name="conteudo">
 			<f:metadata>
 				<f:viewParam name="matricula" value="#{relatorioEntradaSaidaBean.matricula}" />
+				<f:viewAction action="#{relatorioEntradaSaidaBean.carregarAluno}" />
 			</f:metadata>
+			
 			<h1>Relatório de Entradas e Saídas</h1>
+			
+			<h:panelGroup rendered="#{!facesContext.messageList.isEmpty()}" >
+				<div id="infoMessage">
+					<h:messages />
+				</div>			
+			</h:panelGroup>
+			
+			<br />
 
 			<form jsf:id="form">
 				<fieldset>
