--- a/src/main/webapp/layout.xhtml
+++ b/src/main/webapp/layout.xhtml
@@ -18,10 +18,10 @@
 			<nav>
 				<div>
 					<a jsf:outcome="dadosAluno">Novo Aluno</a><br />
-					<a jsf:outcome="pesquisaDeAluno">Pesquisa de Aluno</a><br />
+					<a jsf:outcome="pesquisaDeAluno?clear=true">Pesquisa de Aluno</a><br />
 					<a jsf:outcome="controleDeAcesso">Controle de Acesso</a><br />		
 					<a jsf:outcome="relatoriosDeEntradaeSaida">Relatórios de Entradas e Saídas</a><br />
-					<a jsf:outcome="relatoriosDeSituacoes">Relatórios de Situações</a><br />					
+					<a jsf:outcome="relatoriosDeSituacoes?clear=true">Relatórios de Situações</a><br />					
 				</div>
 			</nav>
 		</header>
