--- a/src/main/webapp/pesquisaDeAluno.xhtml
+++ b/src/main/webapp/pesquisaDeAluno.xhtml
@@ -9,7 +9,9 @@
 	  
 	  <ui:composition template="layout.xhtml">
 	  	<ui:define name="conteudo">  
-
+			<f:metadata>
+				<f:viewAction action="#{pesquisaAlunoBean.check}" />
+			</f:metadata>
 			<h1>Pesquisa de aluno</h1>
 			
 			<h:panelGroup rendered="#{!facesContext.messageList.isEmpty()}" >
