Corrigindo conversão de dados em formulários

--- a/src/main/webapp/controleDeAcesso.xhtml
+++ b/src/main/webapp/controleDeAcesso.xhtml
@@ -14,9 +14,9 @@
 				<fieldset>
 					<legend>Parâmetros da Acesso</legend>
 					<label for="id">Matricula</label><br />
-					<input type="text" jsf:value="#{controleAcessoBean.matricula}" id="id" /><br />
+					<input type="text" jsf:value="#{controleAcessoBean.matricula}" id="id" jsf:label="Matricula" /><br />
 					<label for="rg">RG</label><br />
-					<input type="text" jsf:value="#{controleAcessoBean.rg}" id="rg" /><br />
+					<input type="text" jsf:value="#{controleAcessoBean.rg}" id="rg" jsf:label="RG" /><br />
 				</fieldset>
 				
 				<br />
