--- a/src/main/webapp/relatoriosDeEntradaeSaida.xhtml
+++ b/src/main/webapp/relatoriosDeEntradaeSaida.xhtml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:jsf="http://xmlns.jcp.org/jsf"
-	lang="pt-br">
-	
-	<ui:composition template="layout.xhtml">
-		<ui:param name="title" value="Relatórios de Entradas e Saídas" />
-		<ui:define name="conteudo">
-			<f:metadata>
-				<f:viewParam name="matricula" value="#{relatorioEntradaSaidaBean.matricula}" />
-				<f:viewAction action="#{relatorioEntradaSaidaBean.carregarAluno}" />
-			</f:metadata>
+	  xmlns:f="http://xmlns.jcp.org/jsf/core"
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:jsf="http://xmlns.jcp.org/jsf"
+	  lang="pt-br">
+		
+	  <ui:composition template="layout.xhtml">
+	  <ui:param name="title" value="Relatórios de Entradas e Saídas" />
+	  <ui:define name="conteudo">
+		<f:metadata>
+			<f:viewParam name="matricula" value="#{relatorioEntradaSaidaBean.matricula}" />
+			<f:viewAction action="#{relatorioEntradaSaidaBean.carregarAluno}" />
+		</f:metadata>
 			
 			<form jsf:id="form">
 				<fieldset>
 					<legend>Parâmetros de Entradas e Saídas</legend>
 					<label for="id">Matrícula</label><br />
-					<input type="text" jsf:value="#{relatorioEntradaSaidaBean.matricula}" id="id" /><br />
+					<input type="text" jsf:value="#{relatorioEntradaSaidaBean.matricula}" id="id" jsf:label="Matricula"/><br />
 					<label for="dataInicial">Data Inicial</label><br />
-					<input type="date" jsf:value="#{relatorioEntradaSaidaBean.dataInicial}" id="dataInicial">
+					<input type="date" jsf:value="#{relatorioEntradaSaidaBean.dataInicial}" id="dataInicial" jsf:label="Data Inicial" >
 						<f:convertDateTime type="localDate" pattern="yyyy-MM-dd" />
 					</input><br />
 					<label for="dataFinal">Data Final</label><br />
-					<input type="date" jsf:value="#{relatorioEntradaSaidaBean.dataFinal}" id="dataFinal">
+					<input type="date" jsf:value="#{relatorioEntradaSaidaBean.dataFinal}" id="dataFinal" jsf:label="Data Final" >
 						<f:convertDateTime type="localDate" pattern="yyyy-MM-dd" />
 					</input>
 				</fieldset>
